modules/ec2/main.tf
terraform {
required_providers {
aws = { source = "hashicorp/aws", version = "~> 5.0" }
}
required_version = ">= 1.5.0"
}

data "aws_vpc" "selected" {
id = var.vpc_id
}

resource "aws_security_group" "web" {
name = "tf-web-sg"
description = "Allow SSH and HTTP"
vpc_id = data.aws_vpc.selected.id

ingress {
description = "SSH"
from_port = 22
to_port = 22
protocol = "tcp"
cidr_blocks = [var.ssh_cidr]
}

ingress {
description = "HTTP"
from_port = 80
to_port = 80
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

egress {
from_port = 0
to_port = 0
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
}

tags = merge({ Name = "tf-web-sg" }, var.tags)
}

resource "aws_instance" "web" {
ami = var.ami_id
instance_type = var.instance_type
subnet_id = var.subnet_id
vpc_security_group_ids = [aws_security_group.web.id]
associate_public_ip_address = true
user_data = var.user_data
tags = merge({ Name = "tf-web" }, var.tags)
}
